# econometrics

./: README.md  pyproject.toml
data/: amsterdam_weekdays.csv
notebooks/: amsterdam_airbnb.ipynb  viz.ipynb
