[tool.poetry]
name = "econometrics"
version = "0.0.1"
description = "project for hse course"
authors = ["rmnigm"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
numpy = "1.26.1"
scipy = "1.11.3"
pandas = "2.1.3"
polars = "0.19.13"
statsmodels = "0.14.0"
scikit-learn = "1.3.2"
matplotlib = "3.8.1"
seaborn = "0.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
